fixed resize and text wrap issues

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -10,6 +10,13 @@
 
 }
 
-table td {
-	text-align: center !important;
+body {
+	background: -webkit-linear-gradient(left,rgba(225,233,241,0),rgba(241,233,225,1)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(right,rgba(225,233,241,0),rgba(241,233,225,1)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(right,rgba(225,233,241,0),rgba(241,233,225,1)); /*Fx 3.6-15*/
+  background: linear-gradient(to right, rgba(225,233,241,0), rgba(241,233,225,1)); /*Standard*/
+}
+
+td, th{
+	white-space: nowrap;
 }
